# SigAgent

./: LICENSE  README.md  RELEASE_PACKAGE.md  REVIEWER_QUICKSTART.md  THIRD_PARTY_NOTICES.md  environment.yml  minimal_release_manifest.tsv  pyproject.toml  requirements-optional.txt  requirements.txt
experiments/: collect_results.py  download_public_sbs96.py  make_ablation_tables.py  make_calibration_tables.py  make_catalog_robustness_tables.py  make_discovery_tables.py  make_metric_reconciliation.py  make_non_degradation_audit.py  make_paper_figures.py  make_real_data_removal_design.py  make_real_data_stress_tables.py  make_release_smoke_fixtures.py  make_removal_manifest.py  make_review_response_summary.py  make_sensitivity_tables.py  make_signature_catalog_variant.py  make_tables.py  optimize_review_risks.py  run_paper_suite.py  summarize_catalog_assessor.py  summarize_manuscript_enhancements.py  validate_paper_outputs.py  validate_release_readiness.py
signature_decision/: __init__.py  benchmark.py  catalog_insufficiency.py  cohort.py  confidence.py  conformal_groups.py  fusion.py  fusion_features.py  group_calibration.py  metrics.py  removal_design.py  schemas.py  simulation.py
tests/: test_ablation_tables.py  test_benchmark_metadata.py  test_benchmark_removal_manifest.py  test_calibration_tables.py  test_catalog_assessor_summary.py  test_catalog_insufficiency.py  test_discovery_tables.py  test_fusion_features.py  test_non_degradation_audit.py  test_optional_expert_imports.py  test_paper_figures.py  test_paper_output_validation.py  test_paper_suite_runner.py  (+7 more)
(+45 files in other folders)
