[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sigagent"
version = "0.1.0"
description = "Decision-support framework for mutational signature assignment and catalog-insufficiency auditing."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "SigAgent authors"}
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scipy>=1.13",
  "scikit-learn>=1.2",
  "matplotlib>=3.8"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[project.optional-dependencies]
dev = [
  "pytest>=7"
]
optional-plots = [
  "seaborn>=0.12"
]
amusa-adapter = [
  "torch>=2.1"
]

[tool.setuptools.packages.find]
include = ["signature_decision*"]
